# Bottle-Flipeer

src/flip/: package.xml  setup.cfg  setup.py
src/flip/config/: trajectory_config.yaml
src/flip/flip/: flip.py
src/flip/launch/: flip_launch.py
src/pick/: CMakeLists.txt  package.xml
src/pick/include/: moveit_servo_ur.hpp
src/pick/launch/: pick_launch.py
src/pick/src/: pick.cpp
